# qwen_tagger

./: .gitignore  README.md  adas_scene_tagging.py  construction_stright_enter_tunnel.txt  pyproject.toml  qwenvl_vllm.py  tagger.py  tagger_dynamic.py  tagger_v.py  test_minicpm.py
prompts/: prompts.py  prompts_science_research.py
src/fawai_tagger/: ad_tags.py  tagger.py
tests/: test_tagger.py
